objects/Terms_Conditions__c.object
<CustomObject>
    <description>Used to track various iterations of MSA’s and amendments, to track volume commitments (vendor and Borrego), and compare to purchases made. Also links terms and warranties directly to PO&apos;s</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>equals</operation>
                <value>Vendor, Customer and Vendor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Terms &amp; Conditions</relationshipLabel>
        <relationshipName>Terms_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Borrego_Outstanding_Commitment_kW__c</fullName>
        <formula>Borrego_Volume_Commitment_Roll_Up__c - Total_Volume_Purchased_Roll_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Borrego Commitment (kW)&quot; less &quot;Total Volume Purchased (kW)&quot;</inlineHelpText>
        <label>Borrego Outstanding Commitment (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrego_Volume_Commitment_Roll_Up__c</fullName>
        <label>Borrego Volume Commitment (KW)</label>
        <summarizedField>Volume_Commitment__c.Borrego_Commitment_kW__c</summarizedField>
        <summaryForeignKey>Volume_Commitment__c.Terms_Conditions__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Borrego_Volume_Commitment__c</fullName>
        <label>Borrego Volume Commitment(Old)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Status__c</fullName>
        <description>Rollup Helper populates the Status of the associated Volume Commitment</description>
        <label>Commitment Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeedERP__Purchase_Order__c.AcctSeedERP__Vendor__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
        <relationshipLabel>Terms &amp; Conditions</relationshipLabel>
        <relationshipName>Terms_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarterly_Outstanding_Commitment_kW__c</fullName>
        <formula>Quarterly_Volume_Commitment_kW__c - Quarterly_Total_Volume_Purchased_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Outstanding Commitment (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Total_Volume_Purchased_kW__c</fullName>
        <label>Quarterly Total Volume Purchased (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Volume_Commitment_kW__c</fullName>
        <label>Quarterly Volume Commitment (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Volume_Purchased_Roll_Up__c</fullName>
        <label>Total Volume Purchased (KW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volume_Purchased__c</fullName>
        <formula>Purchase_Order__r.Total_Volume_Purchased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume Purchased(kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>MSA with Amendment</fullName>
                </value>
                <value>
                    <fullName>Standard T &amp; C with Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Outstanding_Commitment_kW__c</fullName>
        <formula>Vendor_Volume_Commitment_Roll_Up__c - Total_Volume_Purchased_Roll_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Vendor Commitment (kW)&quot; less &quot;Total Volume Purchased (kW)</inlineHelpText>
        <label>Vendor Outstanding Commitment (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Volume_Commitment_Roll_Up__c</fullName>
        <label>Vendor Volume Commitment (KW)</label>
        <summarizedField>Volume_Commitment__c.Vendor_Commitment_kW__c</summarizedField>
        <summaryForeignKey>Volume_Commitment__c.Terms_Conditions__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Volume_Committment__c</fullName>
        <label>Vendor Volume Commitment(Old)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Terms &amp; Conditions</label>
    <nameField>
        <label>Terms &amp; Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms &amp; Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>